-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
4.1.0, 4.8.7, 5.5.0, 5.12.4
-
None
-
580e9eedf783ccbdcb67baa3d1a9dcdd53922f86
-
Q1/2020 Finale
It's possible to set a date-time range e.g. from 2006/01/17 16:00 to 2006/01/18 8:00 for QDateTimeEdit, but then the user is not able change the date to 2006/01/18 (he can enter date-time only from range: 16:00 - 23:59 on 2006/01/17).
It's also not possible to set range e.g. from 20:00 to 5:00 for QTimeEdit (could be useful, as e.g. for pub opening hours
)
- is duplicated by
-
QTBUG-17078 QDateEdit: setting min/max may make some dates inaccessible
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-65 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 309524,2 | WIP: fix QDTE tests to check well-defined results with keyboard tracking | dev | qt/qtbase | Status: NEW | -2 | 0 |